get responses from web service instead of switching to networkFinder
--HG--
branch : sod